# quantum-dashboard

./: .gitignore  LEARNING_LOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: app.py  database.py  noise_models.py  quantum_engine.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  IMPLEMENTATION_GUIDE.md  LEARNING_RESOURCES.md  PROJECT_SETUP.md  QUANTUM_CONCEPTS.md  SPEC_KIT.md  TESTING_CHECKLIST.md  TIMELINE.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ControlsPanel.jsx  FidelityChart.jsx  HistoryPanel.jsx  ResultsPanel.jsx
frontend/src/hooks/: useSimulation.js
specs/001-quantum-engine/: spec.md
specs/002-noise-models/: spec.md
specs/003-flask-api/: spec.md
specs/004-noise-sweep/: spec.md
tests/: test_api.py  test_database.py  test_noise_models.py  test_quantum_engine.py
